--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-spinners": "^0.13.8",
+    "react-youtube": "^10.1.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
