--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "lucide-react": "^0.291.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-spinners": "^0.13.8",
     "react-youtube": "^10.1.0",
+    "reactstrap": "^9.2.2",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
