--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "ethiopian-date": "^0.0.6",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.0",
     "ts-node": "^10.9.2",
