--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "ethiopian-calendar-date-converter": "^2.1.3",
+    "framer-motion": "^11.0.8",
     "html-react-parser": "^5.1.2",
     "lucide-react": "^0.291.0",
     "prop-types": "^15.8.1",
