--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.13",
     "react-icons": "^4.11.0",
     "react-modal": "^3.16.1",
     "react-quill": "^2.0.0",
