--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "ethiopian-calendar-date-converter": "^2.1.3",
+    "formik": "^2.4.5",
     "framer-motion": "^11.0.8",
     "html-react-parser": "^5.1.2",
     "lucide-react": "^0.291.0",
@@ -39,7 +40,8 @@
     "react-youtube": "^10.1.0",
     "reactstrap": "^9.2.2",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.10",
