--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "embla-carousel-react": "^8.0.2",
     "ethiopian-calendar-date-converter": "^2.1.3",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.8",
