--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
+    "react-card-flip": "^1.2.2",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
     "react-icons": "^4.11.0",
