--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@material-ui/core": "^4.12.4",
     "@phosphor-icons/react": "^2.0.15",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-progress": "^1.0.3",
