--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@splidejs/react-splide": "^0.7.12",
     "@svgr/rollup": "^8.1.0",
+    "@wojtekmaj/react-daterange-picker": "^6.0.0",
     "axios": "^1.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -36,6 +37,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-card-flip": "^1.2.2",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
     "react-icons": "^4.11.0",
@@ -47,6 +49,7 @@
     "react-toastify": "^10.0.4",
     "react-youtube": "^10.1.0",
     "reactstrap": "^9.2.2",
+    "recharts": "^2.12.7",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.4.0"
