--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-bootstrap": "^2.10.0",
     "react-card-flip": "^1.2.2",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-error-boundary": "^4.0.13",
     "react-ga4": "^2.1.0",
     "react-icons": "^4.11.0",
