--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@svgr/rollup": "^8.1.0",
     "@wojtekmaj/react-daterange-picker": "^6.0.0",
     "axios": "^1.6.0",
+    "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "embla-carousel-react": "^8.0.2",
