--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@splidejs/react-splide": "^0.7.12",
     "@svgr/rollup": "^8.1.0",
     "@wojtekmaj/react-daterange-picker": "^6.0.0",
-    "axios": "^1.6.0",
+    "axios": "^1.7.7",
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -33,6 +33,7 @@
     "ethiopian-calendar-date-converter": "^2.1.3",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.8",
+    "google-auth-library": "^9.14.1",
     "html-react-parser": "^5.1.2",
     "lucide-react": "^0.291.0",
     "prop-types": "^15.8.1",
@@ -47,7 +48,7 @@
     "react-modal": "^3.16.1",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.17.0",
+    "react-router-dom": "^6.26.2",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.4",
     "react-youtube": "^10.1.0",
