--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-modal": "^3.16.1",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.26.2",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.4",
