update styling for the search bar

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,11 +23,8 @@
     // shadcn config
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["./src/*"]
     }
-
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
