Add Cypress type definitions and update test configuration
- Added @types/cypress as a development dependency for improved TypeScript support.
- Updated tsconfig.json to include Cypress types and additional file paths for test files.
- Modified Cypress test to use class selectors instead of data-testid for better compatibility.

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/cypress": "^0.1.6",
     "@types/node": "^20.8.10",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
