--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "cypress/**/*.ts", "cypress/**/*.tsx"],
+  "types": ["cypress"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
