Refactor TypeScript configuration for Cypress tests
- Removed Cypress file paths from the main tsconfig.json to streamline configuration.
- Updated cypress/tsconfig.json to include additional types and set target and lib options for better compatibility.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src", "cypress/**/*.ts", "cypress/**/*.tsx"],
-  "types": ["cypress"],
+  "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
