--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,8 +1,11 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "types": ["cypress"],
-    "isolatedModules": false
+    "types": ["cypress", "node"],
+    "isolatedModules": false,
+    "target": "es5",
+    "lib": ["es5", "dom"],
+    "noEmit": true
   },
   "include": ["**/*.ts", "**/*.tsx"]
 }
